# ERP

./: .clinerules  .clinerules-code  .flake8  .gitattributes  .gitignore  README.md  alembic.ini  changes.md  index.html  index_problemes_build.md  index_problemes_build_regroupes.md  instructions_resolution_problemes_build.md  package-lock.json  package.json  problemes build frontend.md  problemes_build_frontend_TS18046.md  problemes_build_frontend_TS2305.md  problemes_build_frontend_TS2307.md  problemes_build_frontend_TS2322.md  problemes_build_frontend_TS2345.md  problemes_build_frontend_TS2353.md  problemes_build_frontend_TS2551.md  problemes_build_frontend_TS2559.md  problemes_build_frontend_TS2561.md  problemes_build_frontend_TS2614.md  problemes_build_frontend_TS2724.md  problemes_build_frontend_TS2740.md  problemes_build_frontend_TS2741.md  problemes_build_frontend_TS6133.md  problemes_build_frontend_TS6196.md  problems-runlinters.md  problems-test  problems.md  problemsbuild-frontend.md  pyproject.toml  pytest.ini  requirements.txt  run.py  suivi_TS18046.md  suivi_TS2305.md  (+17 more)
.github/: environments.yml
alembic/: env.py
backend/: App.tsx  theme.ts
cline_docs/: admin_credentials.md  analyse_incohérences_nommage.md  codebaseSummary.md  currentTask.md  mvpAcceptanceCriteria.md  mvpEffortEstimation.md  projectRoadmap.md  rapport_analyse_rh_auth.md  standardisation_noms.md  techStack.md
core/: config.py  security.py
db/: database.py
docs/: README.md  analyse_doublons.md  developpement_futur.md  instructions to_do  plan_developpement.md  plan_developpement_technique.md  tests.md  (+1 more)
(+703 files in other folders)
